# fastrlp

./: Cargo.toml  README.md
benches/: bench.rs
fastrlp-derive/: Cargo.toml
fastrlp-derive/src/: de.rs
src/: decode.rs  encode.rs  lib.rs
tests/: rlp.rs
